Quorum3/Library/Tests/Inheritance/Pass/OnCreatePolymorphism.quorum
class Main
    action Main
        A a
    end
end