Quorum3/Library/Tests/Inheritance/Fail/A.quorum
class A 
    action foo()
        output "a"
    end
end